syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufRouteInfo";

import "detail/route/nav_cues.proto";

message RouteInfo {
  NavCues navCues = 1;
}
