syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufRouteLink";

message RouteLink {
  string uid = 1;
  string callsign = 2;
  string type = 3; // TODO: move to mapping
  double lat = 4;
  double lon = 5;
  double hae = 6;
  string remarks = 7; // TODO: gzip?
  string relation = 8; // TODO: move to mapping
}
